should i be so worried about C_n vs U(1)[n]? am i even worrying correctly?

--- a/quillen.tex
+++ b/quillen.tex
@@ -802,7 +802,7 @@ We can immediately reduce the claim in two ways.  First, it is true if and only 
 
 Suppose that \[R^{-2j}_{(p)} = \widetilde{MU}^{-2j}(X)_{(p)}\] for $j < q$ and consider $x \in \widetilde{MU}^{-2q}(X)$.  Then, for $m \gg 0$, we have \[w^m P^p(x) = \sum_{|\alpha| \le m-q} w^{m-q - |\alpha|} a(t)^\alpha s_\alpha x = w^{m-q} x + \sum_{\substack{|\alpha| \le m-q \\ \alpha \ne 0}} w^{m-q - |\alpha|} a(t)^\alpha s_\alpha x.\]  Recall that $w$ is a power series in $t$ with coefficients in $C$ and leading term $(p-1)! \cdot t^{p-1}$, so that $t^{p-1} = w \cdot \theta(t)$ for some multiplicatively invertible series $\theta(t)$ with coefficients in $C$.  Since $s_\alpha$ raises degree, we have $s_\alpha x \in R$ by the inductive hypothesis, and we may thus collect all those terms into a series $\psi_x(t) \in R_{(p)}\llbracket T \rrbracket$ to write \[t^{m-q}(w^qP^p(x) - x) = \psi_x(t).\]
 
-Suppose $m > q$ is the least integer for which we can write such an equation --- we will show $m = q+1$ in a moment.  Using \Cref{RestrictingSteenrodOpToBasepoint}, we find that restricting this equation along the inclusion $i\co X \to X \times B\Z/p$ sets $t = 0$ and yields $\psi_x(0) = 0$.  It follows that $\psi_x(t) = t \phi_x(t)$ is at least once $t$--divisible, and thus \[t (t^{m-q-1}(w^qPx - x) - \phi_x(t)) = 0.\]  Appealing to \Cref{QuillensGysinFact}, we produce a class $y \in \widetilde{MU}^{-2q + 2(m-1)}(X)$ with \[t^{m-q-1}(w^q P^p(x) - x) = \phi_x(x) + y \<p\>(t).\]  If $m > q + 1$, then $y \in R_{(p)}$ for degree reasons and hence the right-hand side gives a series expansion contradicting our minimality hypothesis.  So, $m = q + 1$, and the outer factor of $t^{m-q-1}$ is not present in the last expression.\footnote{One can interpret the proof thus far as giving a bound on the amount of $w$--torsion needed to get the stability relation described in \Cref{QuillensKeyRelation}.  Our answer is quite surprising: we have found that we need just a single $w$, which isn't much stability at all!}  Restricting along $i$ again to set $w = t = 0$ and $P^p(x) = x^p$, we obtain the equation \[\left. \begin{array}{rr} -x & \text{if $q > 0$} \\ x^p - x & \text{if $q = 0$} \end{array} \right\} = \phi_x(0) + py.\]
+Suppose $m > q$ is the least integer for which we can write such an equation --- we will show $m = q+1$ in a moment.  Using \Cref{RestrictingSteenrodOpToBasepoint}, we find that restricting this equation along the inclusion $i\co X \to X \times BU(1)[p]$ sets $t = 0$ and yields $\psi_x(0) = 0$.  It follows that $\psi_x(t) = t \phi_x(t)$ is at least once $t$--divisible, and thus \[t (t^{m-q-1}(w^qPx - x) - \phi_x(t)) = 0.\]  Appealing to \Cref{QuillensGysinFact}, we produce a class $y \in \widetilde{MU}^{-2q + 2(m-1)}(X)$ with \[t^{m-q-1}(w^q P^p(x) - x) = \phi_x(x) + y \<p\>(t).\]  If $m > q + 1$, then $y \in R_{(p)}$ for degree reasons and hence the right-hand side gives a series expansion contradicting our minimality hypothesis.  So, $m = q + 1$, and the outer factor of $t^{m-q-1}$ is not present in the last expression.\footnote{One can interpret the proof thus far as giving a bound on the amount of $w$--torsion needed to get the stability relation described in \Cref{QuillensKeyRelation}.  Our answer is quite surprising: we have found that we need just a single $w$, which isn't much stability at all!}  Restricting along $i$ again to set $w = t = 0$ and $P^p(x) = x^p$, we obtain the equation \[\left. \begin{array}{rr} -x & \text{if $q > 0$} \\ x^p - x & \text{if $q = 0$} \end{array} \right\} = \phi_x(0) + py.\]
 
 In the first case, where $q > 0$, it follows that $MU^{-2q}(X) \subseteq R^{-2q} + pMU^{-2q}(X)$, and since $MU^{-2q}(X)$ has finite order torsion\footnote{This is a consequence of $X$ having finitely many cells, $MU$ having finitely many cells in each degree, and each homotopy group of the stable sphere being finitely generated.} it follows that $MU^{-2q}(X) = R^{-2q}$.  In the other case, $x$ can be rewritten as a sum of elements in $R^{0}$, elements in $p \widetilde{MU}^{0}(X)$, and elements in $(\widetilde{MU}^0(X))^p$.  Since the ideal $\widetilde{MU}^0(X)$ is nilpotent, it again follows that $\widetilde{MU}^0(X) = R^0$, concluding the induction.
 \end{proof}
